# ecommerce-analytics

./: .env.example  .user.yml  Dockerfile  README.md  agent.py  agent_state.json  databricks.yml  dbt_project.yml  docker-compose.yml  init.sh  init_db.py  init_db.sh  profiles.yml  pyproject.toml  register_postgres_connector.sh  run.sh  schema.sql  simulation_agent.py
.github/workflows/: databricks-bundle-deploy.yaml
delta_lake/: make_imports.py
delta_lake/bronze/: ehubs_stream_ingestion.py
delta_lake/bronze/schemas/: customers.json  order_items.json  orders.json  product_categories.json  products.json  sellers.json  zip_code_prefixes.json
delta_lake/common/: delta_cdf_stream_ingestion.py  hubs_stream_ingestion.py  utils.py
delta_lake/gold/models/: customers_metrics.sql  daily_kpis.sql  daily_order_count.sql  sources.yml  valid_orders.sql
delta_lake/resources/: delta_lake_pipelines_job.yml
delta_lake/silver/: bronze_to_silver_cdf_ingestion.py
delta_lake/silver/sql/: customers.sql  order_items.sql  orders.sql  product_categories.sql  products.sql  sellers.sql  zip_code_prefixes.sql
dev-tools/: reset.sh  reset_event_hubs.sh
