[tool.poetry]
name = "ecommerce-analytics"
version = "0.1.0"
description = ""
authors = ["Igor Trevelin <igor.trevelin.xavier@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
SQLAlchemy = "^2.0.34"
numpy = "^2.1.1"
python-dotenv = "^1.0.1"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
